--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Where in the world?</h1>
+      <h1>Where in the world ?</h1>
       <button class="toggle"><i class="far fa-moon moon"></i> Dark mode</button>
     </div>
     <div class="container">
@@ -26,7 +26,7 @@
       </div>
       <div class="dropDownCon">
         <div class="dropDown">
-          <p>Filter Reion</p>
+          <p>Filter Region</p>
           <button><i class="fas fa-chevron-down"></i></button>
         </div>
         <div class="drop showDropDown">
@@ -40,5 +40,30 @@
       </div>
     </div>
     <div class="countries"></div>
+
+    <div class="counrtyModal show">
+      <!-- <div class="modal">
+        <div class="leftModal">
+          <img src="https://flagcdn.com/w320/ax.png" alt="" />
+        </div>
+        <div class="rightModal">
+          <h1>Germany</h1>
+          <div class="moldalInfo">
+            <div class="innerLeft inner">
+              <p><b>Native Name</b> ${data.population}</p>
+              <p><b>Population</b> ${data.region}</p>
+              <p><b>Region:</b> ${data.capital}</p>
+              <p><b>Sub-region:</b> ${data.capital}</p>
+            </div>
+            <div class="innerRight inner">
+              <p><b>Capital:</b> ${data.population}</p>
+              <p><b>Top Level Domain:</b> ${data.region}</p>
+              <p><b>Currencies:</b> ${data.capital}</p>
+              <p><b>Languages:</b> ${data.capital}</p>
+            </div>
+          </div>
+        </div>
+      </div> -->
+    </div>
   </body>
 </html>
